[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents-in-langgraph"
dynamic = ["version"]
dependencies = [
    "langchain==0.2.0",
    "langchain-community==0.2.0",
    "langchain-openai==0.1.7",
    "langgraph==0.0.53",
    "langsmith==0.1.93",
    "openai==1.30.1"
]