[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aiagentgraph"
src = "lib"
packages = [{include = "aiagentgraph"}]
dependencies = [
    "langchain==0.2.0",
    "langchain-community==0.2.0",
    "langchain-openai==0.1.7",
    "langgraph==0.0.53",
    "langsmith==0.1.93",
    "openai==1.30.1"
]

[tool.setuptools.dynamic]
version = {attr = "aiagentgraph.__version__"} 